# vtp

./: .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: api.md  architecture.md  deployment.md  development.md
scripts/: build-worker.js
src/: app.html
src/components/: Dashboard.svelte  EventLog.svelte  IdentityBadge.svelte  PWAInstall.svelte  StatsPanel.svelte  VDFCanvas.svelte
src/lib/background/: audio-keepalive.ts  index.ts  persistence.ts  visibility.ts  watchdog.ts
src/lib/vtp-core/: Cargo.toml
src/lib/vtp-core/src/: error.rs  lib.rs  session.rs  utils.rs  vdf.rs  vrf.rs
src/lib/vtp-core/tests/: error_test.rs  session_test.rs  vdf_test.rs  vrf_test.rs
src/lib/vtp-core/types/: vtp_core.d.ts
src/lib/worker/: index.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/stores/: visibility.ts  worker.ts
src/utils/: index.ts
static/: manifest.json  sw.js
tests/: utils.test.ts  worker-store.test.ts
