[package]
name = "vtp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen.workspace = true
serde.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook = { workspace = true, optional = true }

# Cryptography
sha2 = "0.10"
curve25519-dalek = { version = "4.1", features = ["alloc"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
subtle = "2.5"

# Big integer for VDF class group
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }
sha2 = "0.10"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
